# pamatnik-pandemie-admin

./: .env_example  .gitignore  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  config.py  requirements.txt  setup.cfg
pamatnikpandemie/: __init__.py  admin.py  api.py  database.py  models.py  static.py  update.py  wsgi.py
pamatnikpandemie/templates/: 404.jinja2  _form_helpers.jinja2  hotovo.jinja2  index.jinja2  pribeh.jinja2  story.jinja2  vzpominka.jinja2
pamatnikpandemie/templates/admin/: index.html
pomnicek/: __init__.py  admin.py  api.py  database.py  models.py  static.py  update.py  wsgi.py
pomnicek/templates/: 404.jinja2  index.jinja2
tests/: conftest.py  locust_web.py  test_api.py  test_factory.py  test_simple.py  test_static.py  test_update.py
